feat: implement saving current language in LS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://bootswatch.com/5/vapor/bootstrap.min.css"
       crossorigin="anonymous"
     />
-    <title>React Forms</title>
+    <title>GraphiQL</title>
   </head>
   <body>
     <div id="root"></div>
