--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://bootswatch.com/5/vapor/bootstrap.min.css"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <title>GraphiQL</title>
   </head>
   <body>
